# kwin-effect-scaleout

./: CMakeLists.txt  configure  project.config  scaleup.cpp  scaleup.desktop  scaleup.h  scaleup_config.cpp  scaleup_config.desktop  scaleup_config.h  scaleup_config.ui
